--- a/app/src/main/res/layout/activity_thank_you.xml
+++ b/app/src/main/res/layout/activity_thank_you.xml
@@ -37,18 +37,26 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewTickMark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_200sdp"
+        android:layout_marginTop="@dimen/_60sdp"
         app:layout_constraintEnd_toEndOf="@+id/textViewCongratsTitle"
         app:layout_constraintStart_toStartOf="@+id/textViewCongratsTitle"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCongratsTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCongratsTitle"
+        android:src="@drawable/thankyoupageimage"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonGoHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_260sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:background="@drawable/proceed"
+        android:fontFamily="@font/zenantique"
+        android:textSize="@dimen/_14ssp"
+        android:textColor="@color/white"
+        android:letterSpacing=".15"
         android:text="Go Home"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/_80sdp"
         app:layout_constraintEnd_toEndOf="@+id/imageViewTickMark"
-        app:layout_constraintStart_toStartOf="@+id/imageViewTickMark" />
+        app:layout_constraintStart_toStartOf="@+id/imageViewTickMark"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewTickMark" />
 </androidx.constraintlayout.widget.ConstraintLayout>
