--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -11,13 +11,13 @@
         android:id="@+id/textViewCheckout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Checkout"
         android:layout_marginTop="@dimen/_20sdp"
-        android:textColor="@color/textColor"
         android:fontFamily="@font/orbitron"
-        android:textStyle="bold"
         android:letterSpacing=".1"
+        android:text="Checkout"
+        android:textColor="@color/textColor"
         android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,13 +26,13 @@
         android:id="@+id/textViewDeliveryDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delivery Details"
-        android:fontFamily="@font/zenantique"
-        android:textStyle="bold"
-        android:textColor="@color/textColor"
-        android:textSize="@dimen/_14ssp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/zenantique"
+        android:text="Delivery Details"
+        android:textColor="@color/textColor"
+        android:textSize="@dimen/_14ssp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCheckout" />
 
@@ -40,15 +40,15 @@
         android:id="@+id/editTextName"
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_40sdp"
-        android:background="@drawable/edittext"
         android:layout_marginTop="@dimen/_10sdp"
+        android:background="@drawable/edittext"
+        android:ems="10"
         android:fontFamily="@font/zenantique"
+        android:hint="Name"
+        android:inputType="text"
+        android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/textColor"
         android:textColorHint="@color/black"
-        android:ems="10"
-        android:paddingStart="@dimen/_10sdp"
-        android:inputType="text"
-        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDetails" />
@@ -57,15 +57,15 @@
         android:id="@+id/editTextAddress"
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_40sdp"
-        android:ems="10"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/edittext"
+        android:ems="10"
+        android:fontFamily="@font/zenantique"
+        android:hint="Address"
+        android:inputType="text"
+        android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/textColor"
         android:textColorHint="@color/black"
-        android:fontFamily="@font/zenantique"
-        android:paddingStart="@dimen/_10sdp"
-        android:inputType="text"
-        android:hint="Address"
         app:layout_constraintEnd_toEndOf="@+id/editTextName"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
@@ -74,15 +74,15 @@
         android:id="@+id/editTextPhone"
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_40sdp"
-        android:ems="10"
         android:layout_marginTop="@dimen/_10sdp"
-        android:hint="Phone"
+        android:background="@drawable/edittext"
+        android:ems="10"
         android:fontFamily="@font/zenantique"
+        android:hint="Phone"
+        android:inputType="phone"
+        android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/textColor"
         android:textColorHint="@color/black"
-        android:paddingStart="@dimen/_10sdp"
-        android:background="@drawable/edittext"
-        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
         app:layout_constraintStart_toStartOf="@+id/editTextAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
@@ -92,14 +92,14 @@
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/zenantique"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
-        android:paddingStart="@dimen/_10sdp"
         android:background="@drawable/edittext"
         android:ems="10"
-        android:inputType="textEmailAddress"
+        android:fontFamily="@font/zenantique"
         android:hint="E-mail"
+        android:inputType="textEmailAddress"
+        android:paddingStart="@dimen/_10sdp"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
         app:layout_constraintStart_toStartOf="@+id/editTextPhone"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
@@ -108,13 +108,13 @@
         android:id="@+id/textViewPaymentOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:text="Payment Options"
-        android:fontFamily="@font/zenantique"
         android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/zenantique"
+        android:text="Payment Options"
         android:textColor="@color/textColor"
-        android:textStyle="bold"
         android:textSize="@dimen/_14ssp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
 
@@ -130,40 +130,86 @@
             android:id="@+id/payViaKhalti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/zenantique"
-            android:textColor="@color/textColor"
-            android:textSize="@dimen/_10ssp"
             android:layout_marginStart="@dimen/_40sdp"
+            android:button="@drawable/custom_radio_button"
+            android:fontFamily="@font/zenantique"
             android:text="Pay Via Khalti"
-            android:button="@drawable/custom_radio_button"/>
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/_10ssp" />
 
         <RadioButton
             android:id="@+id/payViaPaytm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_40sdp"
+            android:button="@drawable/custom_radio_button"
             android:fontFamily="@font/zenantique"
-            android:textColor="@color/textColor"
-            android:textSize="@dimen/_10ssp"
             android:text="Cash in Delivery"
-            android:button="@drawable/custom_radio_button"/>
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/_10ssp" />
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textGrandTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="563dp" />
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/zenantique"
+        android:text="Grand Total: "
+        android:textColor="@color/textColor"
+        android:textSize="@dimen/_14sdp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupPaymentMethod" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textGrandTotalAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="673dp" />
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
+        android:fontFamily="@font/zenantique"
+        android:text="Rs. 500"
+        android:textColor="@color/textColor"
+        android:textSize="@dimen/_14ssp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroupPaymentMethod" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonConfirmOrder"
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_35sdp"
+        android:fontFamily="@font/zenantique"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@drawable/proceed"
+        android:letterSpacing=".1"
+        android:textSize="@dimen/_14sdp"
+        android:textStyle="bold"
+        android:text="Confirm Order"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textGrandTotal" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonCancel"
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:fontFamily="@font/zenantique"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@drawable/proceed"
+        android:letterSpacing=".1"
+        android:textSize="@dimen/_14sdp"
+        android:textStyle="bold"
+        android:text="Cancel"
+        android:layout_marginTop="@dimen/_15sdp"
+        app:layout_constraintEnd_toEndOf="@+id/buttonConfirmOrder"
+        app:layout_constraintStart_toStartOf="@+id/buttonConfirmOrder"
+        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmOrder" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
