--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/imageLogo"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_240sdp"
+        android:contentDescription="@string/logo_image"
+        android:layout_width="@dimen/_280sdp"
+        android:layout_height="@dimen/_250sdp"
         android:layout_marginTop="@dimen/_160sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +25,7 @@
         android:text="@string/app_name"
         android:fontFamily="@font/orbitron"
         android:textColor="@color/red"
-        android:textSize="@dimen/_33ssp"
+        android:textSize="@dimen/_35ssp"
         android:textStyle="bold"
         android:letterSpacing=".1"
         app:layout_constraintEnd_toEndOf="@+id/imageLogo"
