--- a/app/src/main/res/layout/activity_find_food.xml
+++ b/app/src/main/res/layout/activity_find_food.xml
@@ -9,9 +9,11 @@
 
     <ImageView
         android:id="@+id/imageFood"
-        android:layout_width="@dimen/_250sdp"
+        android:contentDescription="@string/findFoodYouLove"
+        android:layout_width="@dimen/_270sdp"
         android:layout_height="@dimen/_200sdp"
         android:layout_marginTop="@dimen/_80sdp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,9 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/findFoodYouLove"
-        android:layout_marginTop="@dimen/_20sdp"
         android:textSize="@dimen/_30ssp"
         android:textAlignment="center"
+        android:layout_marginTop="@dimen/_14sdp"
         android:textColor="@color/textColor"
         android:fontFamily="@font/orbitron"
         android:textStyle="bold"
@@ -37,12 +39,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:text="@string/secondScreenParagraph"
         android:fontFamily="@font/zenantique"
         android:textColor="@color/textColor"
         android:textAlignment="center"
-        android:textSize="@dimen/_17ssp"
+        android:textSize="@dimen/_16ssp"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         app:layout_constraintEnd_toEndOf="@+id/textHead"
@@ -57,6 +59,7 @@
         android:textColor="@color/white"
         android:fontFamily="@font/zenantique"
         android:textStyle="bold"
+        android:textAllCaps="false"
         android:textSize="@dimen/_20ssp"
         android:letterSpacing=".1"
         android:layout_marginEnd="@dimen/_25sdp"
