--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,10 +9,11 @@
 
     <ImageView
         android:id="@+id/imageLogo"
-        android:contentDescription="@string/logo_image"
         android:layout_width="@dimen/_280sdp"
         android:layout_height="@dimen/_250sdp"
         android:layout_marginTop="@dimen/_160sdp"
+        android:contentDescription="@string/logo_image"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,12 +23,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
         android:fontFamily="@font/orbitron"
+        android:letterSpacing=".1"
+        android:text="@string/app_name"
         android:textColor="@color/red"
         android:textSize="@dimen/_35ssp"
         android:textStyle="bold"
-        android:letterSpacing=".1"
         app:layout_constraintEnd_toEndOf="@+id/imageLogo"
         app:layout_constraintStart_toStartOf="@+id/imageLogo"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
