--- a/app/src/main/res/layout/activity_find_food.xml
+++ b/app/src/main/res/layout/activity_find_food.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/imageFood"
-        android:contentDescription="@string/findFoodYouLove"
-        android:layout_width="@dimen/_270sdp"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/_200sdp"
         android:layout_marginTop="@dimen/_80sdp"
+        android:contentDescription="@string/findFoodYouLove"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,14 +23,14 @@
         android:id="@+id/textHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/findFoodYouLove"
-        android:textSize="@dimen/_30ssp"
-        android:textAlignment="center"
         android:layout_marginTop="@dimen/_14sdp"
-        android:textColor="@color/textColor"
         android:fontFamily="@font/orbitron"
-        android:textStyle="bold"
         android:letterSpacing=".1"
+        android:text="@string/findFoodYouLove"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="@dimen/_33ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageFood"
         app:layout_constraintStart_toStartOf="@+id/imageFood"
         app:layout_constraintTop_toBottomOf="@+id/imageFood" />
@@ -40,31 +40,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_15sdp"
-        android:text="@string/secondScreenParagraph"
         android:fontFamily="@font/zenantique"
-        android:textColor="@color/textColor"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_5sdp"
+        android:text="@string/secondScreenParagraph"
         android:textAlignment="center"
+        android:textColor="@color/textColor"
         android:textSize="@dimen/_16ssp"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
         app:layout_constraintEnd_toEndOf="@+id/textHead"
         app:layout_constraintStart_toStartOf="@+id/textHead"
         app:layout_constraintTop_toBottomOf="@+id/textHead" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonNext"
-        android:background="@drawable/nextbutton"
-        android:layout_width="@dimen/_105sdp"
-        android:layout_height="@dimen/_45sdp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/zenantique"
-        android:textStyle="bold"
-        android:textAllCaps="false"
-        android:textSize="@dimen/_20ssp"
-        android:letterSpacing=".1"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_marginEnd="@dimen/_25sdp"
         android:layout_marginBottom="@dimen/_70sdp"
+        android:background="@drawable/nextbutton"
+        android:elevation="@dimen/_5sdp"
+        android:fontFamily="@font/zenantique"
+        android:letterSpacing=".1"
         android:text="@string/Next"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_20ssp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
