--- a/app/src/main/res/layout/activity_login_home.xml
+++ b/app/src/main/res/layout/activity_login_home.xml
@@ -9,9 +9,10 @@
 
     <ImageView
         android:id="@+id/imageLogo"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_240sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_250sdp"
         android:layout_marginTop="@dimen/_80sdp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,12 +22,12 @@
         android:id="@+id/textAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
         android:fontFamily="@font/orbitron"
-        android:textColor="@color/red"
-        android:textStyle="bold"
-        android:textSize="@dimen/_30ssp"
         android:letterSpacing=".1"
+        android:text="@string/app_name"
+        android:textColor="@color/red"
+        android:textSize="@dimen/_35ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageLogo"
         app:layout_constraintStart_toStartOf="@+id/imageLogo"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
@@ -34,16 +35,17 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
         android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_40sdp"
         android:background="@drawable/nextbutton"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_23ssp"
-        android:letterSpacing=".1"
-        android:textStyle="bold"
         android:elevation="@dimen/_5sdp"
         android:fontFamily="@font/zenantique"
+        android:letterSpacing=".1"
         android:text="@string/loginButton"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_22ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textAppName"
         app:layout_constraintStart_toStartOf="@+id/textAppName"
         app:layout_constraintTop_toBottomOf="@+id/textAppName" />
@@ -51,16 +53,17 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSignup"
         android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_30sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/nextbutton"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_23ssp"
         android:elevation="@dimen/_5sdp"
-        android:letterSpacing=".1"
-        android:textStyle="bold"
         android:fontFamily="@font/zenantique"
+        android:letterSpacing=".1"
         android:text="@string/signupButton"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_22ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
         app:layout_constraintStart_toStartOf="@+id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
