--- a/app/src/main/res/layout/activity_wel_come_screen.xml
+++ b/app/src/main/res/layout/activity_wel_come_screen.xml
@@ -9,9 +9,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="@dimen/_230sdp"
-        android:layout_height="@dimen/_240sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_250sdp"
         android:layout_marginTop="@dimen/_100sdp"
+        android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,13 +23,12 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="@dimen/_30ssp"
-        android:textColor="@color/red"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
+        android:text="@string/app_name"
+        android:textColor="@color/red"
+        android:textSize="@dimen/_35ssp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -36,12 +37,12 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/slogan"
         android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/zenantique"
+        android:text="@string/slogan"
+        android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="@dimen/_20ssp"
-        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -49,21 +50,22 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonGetStarted"
         android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_50sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginStart="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:layout_marginBottom="@dimen/_64sdp"
         android:background="@drawable/nextbutton"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:fontFamily="@font/zenantique"
-        android:text="@string/getStartedButton"
         android:elevation="@dimen/_5sdp"
+        android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
+        android:text="@string/getStartedButton"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="@dimen/_20ssp"
+        android:textSize="@dimen/_22ssp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
