small backend part and customer ui completed

--- a/app/src/main/res/layout/activity_find_food.xml
+++ b/app/src/main/res/layout/activity_find_food.xml
@@ -62,6 +62,7 @@
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="@string/Next"
+        android:outlineSpotShadowColor="@color/pastel_blue"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
