--- a/app/src/main/res/drawable/nextbutton.xml
+++ b/app/src/main/res/drawable/nextbutton.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/white"/>
+    <stroke
+        android:width="@dimen/_1sdp"
+        android:color="#720B36"/>
     <corners
-        android:radius="@dimen/_10sdp"/>
+        android:radius="@dimen/_15sdp"/>
     <gradient
         android:startColor="#DA1111"
         android:endColor="#CF6868"/>
