--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="red">#C2020D</color>
     <color name="background">#FFFFFF</color>
     <color name="textColor">#000000</color>
+    <color name="pastel_blue">#A7C7E7</color>
     <color name="transparent">#00000000</color>
 </resources>
