small backend part and customer ui completed

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -64,7 +64,9 @@
         android:background="@drawable/edittext"
         android:drawableStart="@drawable/lock"
         android:drawablePadding="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_5sdp"
         android:ems="10"
+        android:drawableEnd="@drawable/eye_show_svgrepo_com"
         android:fontFamily="@font/zenantique"
         android:hint="@string/textBoxPassword"
         android:inputType="textPassword"
