--- a/app/src/main/res/drawable/logo_2.xml
+++ b/app/src/main/res/drawable/logo_2.xml
@@ -1,7 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="520dp"
-    android:height="466dp"
-    android:viewportWidth="520"
+    android:height="466dp"    android:viewportWidth="520"
     android:viewportHeight="466">
   <path
       android:pathData="M153.8,130.4l-102.8,103.1 54.8,54.8 54.7,54.7 1.8,-9.7c0.9,-5.4 2.8,-16.8 4.2,-25.3 1.4,-8.5 2.8,-16.2 3,-17.1 0.3,-0.9 1.6,-8.3 3,-16.5 2.4,-15.2 4.5,-27.6 7.1,-41.9 0.7,-4.4 2.5,-15 3.8,-23.5 1.4,-8.5 2.7,-16.2 3,-17 0.3,-0.8 1.7,-8.5 3.1,-17 2.2,-13.7 4.3,-26.6 6,-36.8l0.6,-3.2 24.7,0.2c24,0.3 24.7,0.4 24.5,2.3 -0.4,4.3 -5.2,35.2 -5.8,36.6 -0.5,1.4 -5.5,34.3 -5.2,34.5 0.1,-0 12.8,-0.2 28.2,-0.5l27.9,-0.6 2.4,-13c3.5,-19.8 8,-46.3 10.7,-63.4 1.4,-8.5 2.7,-16.2 3,-17.2 0.4,-1 1.7,-8.7 3,-17l2.4,-15.2 -6,-6.8c-6,-6.7 -47.6,-47.3 -48.8,-47.5 -0.3,-0.1 -46.8,46.2 -103.3,103z"
