--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageLogo"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_250sdp"
+        android:background="@color/black"
         android:layout_marginTop="@dimen/_160sdp"
         android:contentDescription="@string/logo_image"
         android:scaleType="fitXY"
