--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,19 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.HungryHive" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorBackground">@color/background_color</item>
+        <item name="colorPrimaryText">@color/primary_text_color</item>
+        <item name="colorAccentText">@color/accent_text_color</item>
+        <item name="colorButtonBackground">@color/button_card_background</item>
+        <item name="colorButtonText">@color/button_text_color</item>
+        <item name="android:shadowColor">@color/shadow_color</item>
+        <item name="colorBorder">@color/border_color</item>
+        <item name="colorIcon">@color/icon_color</item>
+        <!-- Brand Colors -->
+        <item name="colorBrandRed">@color/brand_red</item>
+        <item name="colorBrandGreen">@color/brand_green</item>
+        <item name="colorButtonAccent">@color/button_accent_color</item>
     </style>
 
-    <style name="Theme.HungryHive" parent="Base.Theme.HungryHive" />
+    <style name="Theme.HungryHive" parent="Base.Theme.HungryHive"/>
 </resources>
