small backend part and customer ui completed

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -15,7 +15,7 @@
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
         android:text="Checkout"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="Delivery Details"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +47,8 @@
         android:hint="Name"
         android:inputType="text"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDetails" />
@@ -64,8 +64,8 @@
         android:hint="Address"
         android:inputType="text"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/editTextName"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
@@ -81,8 +81,8 @@
         android:hint="Phone"
         android:inputType="phone"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
         app:layout_constraintStart_toStartOf="@+id/editTextAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
@@ -98,8 +98,8 @@
         android:hint="E-mail"
         android:inputType="textEmailAddress"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="#000000"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
         app:layout_constraintStart_toStartOf="@+id/editTextPhone"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
@@ -112,7 +112,7 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="Payment Options"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
             android:button="@drawable/custom_radio_button"
             android:fontFamily="@font/zenantique"
             android:text="Pay Via Khalti"
-            android:textColor="@color/textColor"
+            android:textColor="#000000"
             android:textSize="@dimen/_10ssp" />
 
         <RadioButton
@@ -145,7 +145,7 @@
             android:button="@drawable/custom_radio_button"
             android:fontFamily="@font/zenantique"
             android:text="Cash in Delivery"
-            android:textColor="@color/textColor"
+            android:textColor="#000000"
             android:textSize="@dimen/_10ssp" />
     </RadioGroup>
 
@@ -157,7 +157,7 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="Grand Total: "
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_14sdp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +171,7 @@
         android:layout_marginEnd="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="Rs. 500"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +183,7 @@
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_35sdp"
         android:fontFamily="@font/zenantique"
-        android:textColor="@color/white"
+        android:textColor="#000000"
         android:textAllCaps="false"
         android:background="@drawable/proceed"
         android:letterSpacing=".1"
@@ -199,7 +199,7 @@
         android:layout_width="@dimen/_180sdp"
         android:layout_height="@dimen/_40sdp"
         android:fontFamily="@font/zenantique"
-        android:textColor="@color/white"
+        android:textColor="#000000"
         android:textAllCaps="false"
         android:background="@drawable/proceed"
         android:letterSpacing=".1"
