--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="@dimen/_60sdp"
         android:textStyle="bold"
         android:fontFamily="@font/orbitron"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:textSize="@dimen/_20ssp"
         android:letterSpacing=".1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +30,9 @@
         android:layout_marginTop="@dimen/_30sdp"
         android:inputType="textPassword"
         android:hint="Old Password"
-        android:textColor="@color/textColor"
+        android:textColor="#000000"
         android:fontFamily="@font/zenantique"
-        android:textColorHint="@color/black"
+        android:textColorHint="#000000"
         android:paddingStart="@dimen/_10sdp"
         android:autofillHints="password"
         android:background="@drawable/edittext"
