--- a/app/src/main/res/layout/activity_login_home.xml
+++ b/app/src/main/res/layout/activity_login_home.xml
@@ -25,7 +25,7 @@
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
         android:text="@string/app_name"
-        android:textColor="@color/red"
+        android:textColor="@color/black"
         android:textSize="@dimen/_35ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageLogo"
