--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="textColor">#000000</color>
     <color name="white">#FFFFFF</color>
 <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
     <!-- Neutral Background Colors -->
     <color name="background_color">#F5F5F5</color>
     <color name="primary_text_color">#333333</color>
